[package]
name = "zportfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#web-framwork
axum = "0.6.0-rc.2"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower = "0.4"
tower-http = {version = "0.3", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#error handle
thiserror = "1.0"
anyhow = "1.0"
sqlx = { version="0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
dotenvy = "0.15.3"
